<resources>
    <string name="app_name">ChangeIT</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_contact_info">Contact info</string>
    <string name="title_detailed_apartment">Apartment Details</string>
    <string name="apartment_list_rent">Rent: %d</string>
    <string name="apartment_list_rooms">Rooms: %d</string>
    <string name="apartment_list_sqm">Sqm: %d</string>
    <string name="rooms_label"> Rooms </string>
    <string name="sqm_label"> Area (sqm) </string>
    <string name="rent_label"> Rent (SEK) </string>
    <string name="detailed_apartment_lookingFor"> I am looking for</string>
    <string name="apartment_image_description"> Apartment image </string>
    <string name="filter_room">Max number of rooms</string>
    <string name="filter_rent">Max rent</string>
    <string name="filter_sqm">Max sqm</string>
    <string name="filter">Filter button</string>
    <string name="detailed_apartment_balcony"> Balcony included? </string>
    <string name="detailed_apartment_wifi"> Wifi included? </string>
    <string name="detailed_apartment_pets"> Pets allowed? </string>
    <string name="detailed_apartment_electricity"> Electricity included? </string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Toggle_button">Toggle Button</string>
    <string name="Maximum_Rent">Maximum Rent (SEK)</string>
    <string name="maximum_sqm">Maximum Area (Sqm)</string>
    <string name="maximum_rooms">Maximum Rooms</string>
    <string name="Description">Add a description</string>
    <string name="Wanted_Area">Wanted Area (North, West, South, East)</string>
    <string name="Publish_Button">Publish Ad</string>
    <string name="Continue_Button">Continue</string>
    <string name="Your_Apartment">Your apartment</string>
    <string name="Create_Ad">Create Ad</string>
    <string name="Contact_the_owner">Contact the owner</string>
    <string name="my_profile">My Profile</string>
    <string name="hint_name">name</string>
    <string name="hint_number">phonenumber</string>
    <string name="hint_mail">mail</string>
    <string name="delete"> Delete advertisement</string>
    <string name="deletequestion"> Are you sure you want to delete your ad?</string>
    <string name="name_icon">profile icon</string>
    <string name="number_icon">phonenumber icon</string>
    <string name="mail_icon">mail icon</string>
    <string name="profile_picture">profile picture</string>
    <string name="share_link">Share link</string>
</resources>