<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.changeit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_favorites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.changeit.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.changeit.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.changeit.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_ad"
            app:destination="@id/ad" />
    </fragment>

    <fragment
        android:id="@+id/ad"
        android:name="com.example.changeit.ui.ad.AdFragment"
        android:label="CreateAd"
        tools:layout="@layout/fragment_ad" >
        <action
            android:id="@+id/action_ad_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>