<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="advertisement"
            type="com.example.changeit.model.Advertisement" />

        <variable
            name="user"
            type="com.example.changeit.model.User" />

        <variable
            name="callback"
            type="com.example.changeit.ui.home.AdvertisementClickCallback" />

        <variable
            name="favouriteCallBack"
            type="com.example.changeit.ui.home.AdvertisementFavouriteClickCallback" />

        <variable
            name="profileCallBack"
            type="com.example.changeit.ui.profile.ProfileClickCallback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profilebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/SGSorange"
            android:clickable="true"
            android:contentDescription="@string/Create_Ad"
            android:src="@android:drawable/ic_menu_add"
            app:backgroundTint="@color/SGSorange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/my_profile"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_name"
            android:text="@{String.valueOf(user.name)}"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myProfile" />

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="128dp"
            android:layout_height="119dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/profile_image_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myProfile"
            android:contentDescription="@string/profile_picture" />


        <TextView
            android:id="@+id/profileNumber"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:hint="@string/hint_number"
            android:text="@{String.valueOf(user.phoneNumber)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileName" />

        <TextView
            android:id="@+id/profileMail"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:hint="@string/hint_mail"
            android:text="@{String.valueOf(user.email)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileNumber" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="410dp"
            android:layout_height="518dp"
            android:layout_marginTop="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="300dp"
                android:background="@color/cardview_dark_background"
                android:minHeight="100dp"
                android:onClick="@{() -> callback.onClick(advertisement)}"
                android:paddingTop="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/apartment_image"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/apartment_image_description" />

                    <TextView
                        android:id="@+id/rent_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@{@string/apartment_list_rent(advertisement.apartment.rent)}"
                        app:layout_constraintStart_toStartOf="@id/apartment_image"
                        app:layout_constraintTop_toBottomOf="@+id/adress_text" />

                    <TextView
                        android:id="@+id/rooms_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{@string/apartment_list_rooms(advertisement.apartment.rooms)}"
                        app:layout_constraintStart_toEndOf="@id/rent_text"
                        app:layout_constraintTop_toBottomOf="@+id/adress_text" />

                    <TextView
                        android:id="@+id/sqm_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{@string/apartment_list_sqm(advertisement.apartment.sqm)}"
                        app:layout_constraintStart_toEndOf="@id/rooms_text"
                        app:layout_constraintTop_toBottomOf="@+id/adress_text" />

                    <ToggleButton
                        android:id="@+id/favourite_button"
                        android:layout_width="29dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/favourite_selector"
                        android:checked="@{advertisement.favourite}"
                        android:onClick="@{() -> favouriteCallBack.onClick(advertisement)}"
                        android:textOff=""
                        android:textOn=""
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/apartment_image" />

                    <TextView
                        android:id="@+id/adress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@{advertisement.apartment.address}"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toStartOf="@+id/favourite_button"
                        app:layout_constraintHorizontal_bias="0.053"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/apartment_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="375dp"
                android:layout_height="50dp"
                android:backgroundTint="#DD3636"
                android:text="@string/delete"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <Button
                android:id="@+id/deleteyes"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#DD3636"
                android:text="@string/Yes"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deletebutton" />

            <Button
                android:id="@+id/deleteno"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/Grey"
                android:text="@string/No"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deletebutton" />

            <TextView
                android:id="@+id/deleteQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deletequestion"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deletebutton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/mailImageView"
            android:layout_width="37dp"
            android:layout_height="23dp"
            android:layout_marginTop="12dp"
            app:tint="@color/SGSorange"
            app:layout_constraintEnd_toStartOf="@+id/profileMail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneImageView"
            bind:srcCompat="@android:drawable/ic_dialog_email"
            android:contentDescription="@string/mail_icon" />


        <ImageView
            android:id="@+id/phoneImageView"
            android:layout_width="32dp"
            android:layout_height="27dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toStartOf="@+id/profileNumber"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileName"
            app:tint="@color/SGSorange"
            android:contentDescription="@string/number_icon"
            bind:srcCompat="@android:drawable/stat_sys_phone_call" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="31dp"
            android:layout_height="24dp"
            android:layout_marginTop="95dp"
            app:layout_constraintEnd_toStartOf="@+id/profileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/SGSorange"
            bind:srcCompat="@drawable/profile"
            android:contentDescription="@string/name_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>